objects/SHDocument__c.object
<CustomObject>
    <fields>
        <fullName>Created_Time__c</fullName>
        <label>Created Time</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentExtension__c</fullName>
        <label>DocumentExtension</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentID__c</fullName>
        <label>DocumentID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <label>DocumentType</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServerRelativeURL__c</fullName>
        <label>ServerRelativeURL</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>SHDocument</label>
    <nameField>
        <label>SHDocument Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SHDocuments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>